--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 
 <html>
-    :WQ
+    
   <head>
        <!-- register service worker -->
        <script>
@@ -16,18 +16,18 @@
                     </script> 
                 <!-- end of service worker -->
         <!-- start of web manifest -->
-        <link rel="manifest" href="/manifest.json">
+        <link rel="manifest" href="{{ url_for('static',filename='manifest.json') }}">
          <!-- end of web manifest -->
            <!-- theme-color -->
         <meta name="theme-color" content="#fff" />
         <!-- end-theme-color -->
-        <script src="assets/jquery.min.js"></script> 
-        <script src="assets/skel.min.js"></script>
-        <script src="assets/util.js"></script>
-        <script src="assets/respond.min.js"></script>
-        <script src="assets/responsive.js"></script>
-        <link rel="stylesheet" href="assets/main.css" />
-        <title>GitHub Page</title>
+        <script src="{{ url_for('static',filename='jquery.min.js') }}"></script> 
+        <script src="{{ url_for('static',filename='skel.min.js') }}"></script>
+        <script src="{{ url_for('static',filename='util.js') }}"></script>
+        <script src="{{ url_for('static',filename='respond.min.js') }}"></script>
+        <script src="{{ url_for('static',filename='responsive.js') }}"></script>
+        <link rel="stylesheet" href="{{ url_for('static',filename='main.css') }}" />
+        <title>PWA Fire Codelab Demo</title>
         <meta charset="utf-8">
             
             
@@ -45,7 +45,7 @@
         
         <![endif]-->
        
-        <link rel="shortcut icon" href="icons/pwafire192white.png">
+        <link rel="shortcut icon" href="{{ url_for('static',filename='pwafire192white.png') }}">
                 
 </head>
 
@@ -54,11 +54,11 @@
 <div id="wrapper">
                         
                         
-<article id="home" class="panel special" style="display: flex;">
+<article id="home" class="panel speciali" style="display: flex;">
                             
-   <div class="image" style="background-image: url(&quot;images/m.jpg&quot;); background-position: center center;">
+   <div class="image" style="background-image: url(&quot;{{ url_for('static',filename='j.jpg') }} &quot;); background-position: center center;">
     
-    <img src="images/m.jpg" alt="" data-position="center center" 
+    <img src="{{ url_for('static',filename='j.jpg') }}" alt="" data-position="center center" 
                                 
    style="display: none;">
                             
@@ -68,10 +68,11 @@
                                 
         <div class="inner">
                                     
-		<header><h1>Wint Theingi Hlaing</h1>
+        <header><h1>Wint Theingi Hlaing</h1>
                                         
-			<p>A student from CU MDY Learning Cloud Native Development<br>My GitHub is at<br><a href="http://github.com/winttheingihlaing">GitHub</a></p>
-                                   
+         <p>I am a student  from CU MDY learning cloud native development <br>
+         	My GitHub page at <a href="https://github.com/winttheingihlaing/">GitHub</a></p>
+                                    
             </header>
                                     
       <nav id="nav">
@@ -92,11 +93,11 @@
             <ul class="icons"><li>
                                     
                          <a href="https://twitter.com/WintTheingi71" class="icon fa-twitter">
+				 <span class="label">Twitter</span></a></li>
                                         
-                <span class="label">Twitter</span></a></li>
-                    <li><a href="https://web.facebook.com/profile.php?id=100012440745697" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+				 <li><a href="https://web.facebook.com/profile.php?id=100012440745697" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
                                         
-                <li><a href="https://github.com/winttheingihlaing.github.io" class="icon fa-github"><span class="label">GitHub</span></a></li>
+                <li><a href="https://github.com/winttheingihlaing" class="icon fa-github"><span class="label">GitHub</span></a></li>
                                         
                   <li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a>
                                         
@@ -112,8 +113,8 @@
     
     <article id="work" class="panel secondary inactive" style="display: none;">
            
-        <div class="image" style="background-image: url(&quot;images/j.jpg&quot;);background-position: center center;">
-        <img src="images/j.jpg" alt="" data-position="center center" style="display: none;">
+        <div class="image" style="background-image: url(&quot;{{ url_for('static',filename='pic04.jpg') }} &quot;);background-position: center center;">
+        <img src="{{ url_for('static',filename='pic04.jpg') }}" alt="" data-position="center center" style="display: none;">
         </div> 
         <div class="content">
         <ul class="actions spinX"><li>
@@ -129,23 +130,21 @@
         <header>
                 <p>Currently</p>
         </header>    
-        <p>Internship student and Learning Cloud Native Development</p>                  
+        <p>I am a final year student from Computer University(Mandalay).Now I am learning cloud native development</p>                  
                                     
          <header>
                                                                    
-         <p>Previously</p>
+         <!-- <p>Previously</p>
                                
         </header>  
-
         <p>
            
-            Final student in Computer University Mandalay. <ul class="actions spinX"><li>
+            Microsft 4Afrika Technical and Sales Intern at Magtech Solutions. <ul class="actions spinX"><li>
                             
-                    <a href="https://web.facebook.com/profile.php?id=100012440745697" class="button small forward">Expand</a></li>
+                    <a href="https://www.linkedin.com/in/mayeedwin/" class="button small forward">Expand</a></li>
                    
                    </ul>
-
-        </p>
+        </p> -->
                                 
                                 </div>
                             
@@ -155,8 +154,8 @@
                         
         <article id="about" class="panel secondary inactive" style="display: none;">
                             
-        <div class="image" style="background-image: url(&quot;images/m.jpg&quot;); background-position: center center;">
-        <img src="images/m.jpg" alt="" data-position="center center" style="display: none;">
+        <div class="image" style="background-image: url(&quot;{{ url_for('static',filename='m.jpg') }}&quot;); background-position: center center;">
+        <img src="{{ url_for('static',filename='m.jpg') }}" alt="" data-position="center center" style="display: none;">
          </div>
     
          <div class="content">
@@ -176,17 +175,18 @@
             <header>
 
             <h2>About</h2>
-            <p>Computer University Mandalay<br>Cloud Native Development</p>
+            <p>A final year student in computer science<br> Learning Cloud Native Development</p>
 
             </header>
-            <p> 
-             I am an internship student so, I have no experience with web development. But I learn python,html and other languages.
+            <p>              
+             I am a Programmer at Heart, I love Open-Source OS  and want to be a developer.
             </p>
                 
-            <p> 
+            <!-- <p> 
                 
-                Creator of <a href="https://github.com/winttheingihlaing.github.io">GitHub Page</a>.GitHub Page is a static site hosting service designed to host your personal organization or project pages directly from a GitHub respository. You can create and publish GitHub Pages sites online using the Jekyll theme chooser or if you prefer to work locally you can use GitHub Desktop or the command line.
-           </p>
+                Creator of <a href="https://pwafire.org/developer"> Project PWA Fire</a>. It is an open source javascript and json bundle that allows you to convert your existing website into a progressive web app or build one.
+                
+           </p> -->
             
             </div>
         
@@ -197,9 +197,9 @@
      
       <article id="contact" class="panel secondary inactive" style="display: none;">
                 
-            <div class="image" style="background-image: url(&quot;images/pic04.jpg&quot;); background-position: center bottom;">
+            <div class="image" style="background-image: url(&quot;{{ url_for('static',filename='pic03.jpg') }}&quot;); background-position: center bottom;">
                 
-            <img src="images/pic04.jpg" alt="" data-position="bottom center" style="display: none;">
+            <img src="{{ url_for('static',filename='pic03.jpg') }}" alt="" data-position="bottom center" style="display: none;">
         
             </div><div class="content">
                 
@@ -223,7 +223,7 @@
                 
             </header>
 
-            <form name="contactform" method="post" action="assets/send-email.php">
+            <form name="contactform" method="post" action="{{ url_for('static',filename='send-email.php') }}">
             
             <div class="field half first">
                                
