--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@
                                         
 				 <li><a href="https://web.facebook.com/profile.php?id=100012440745697" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
                                         
-                <li><a href="https://github.com/winttheingihlaing" class="icon fa-github"><span class="label">GitHub</span></a></li>
+                <li><a href="https://github.com/winttheingihlaing/" class="icon fa-github"><span class="label">GitHub</span></a></li>
                                         
                   <li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a>
                                         
